# Doc-Parser-Vision-Language-OCR

./: .gitattributes  .gitignore  .pre-commit-config.yaml  IMG_OCR_6_F_0000802.json  LORA_MODEL_LOADANDSAVE.ipynb  Makefile  README.md  allfiles.txt  base_model_dump.txt  hfmodelsaveload.ipynb  model_dump.txt  model_load.ipynb  output.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gpu_ci_test.yml  lint.yml
PaddlePaddle/PaddleOCR-VL/: README.md  image_processing.py  modeling_paddleocr_vl.py
cookbook/: README.md  advanced_search_demo.py  bot_requests.py  conversation_demo.py  crawl_utils.py  knowledge_retrieval_demo.py  simple_ernie_bot_demo.py  web_search_demo.py
cookbook/data/: coffee.txt
cookbook/notebook/: advanced_search_demo_en.ipynb  conversation_demo_en.ipynb  conversation_demo_zh.ipynb  document_translation_tutorial_en.ipynb  dpo_tutorial_en.ipynb  dpo_tutorial_zh.ipynb  key_information_extraction_tutorial_en.ipynb  knowledge_retrieval_demo_en.ipynb  knowledge_retrieval_demo_zh.ipynb  sft_tutorial_en.ipynb  sft_tutorial_zh.ipynb  simple_ernie_bot_demo_en.ipynb  web_search_demo_en.ipynb  (+3 more)
docs/: chat_args.md  cli_webui_usage.md  datasets.md  erniekit.md  export_args.md  fp8_qat.md  paddleocr_vl_sft.md  paddleocr_vl_sft_zh.md  training_eval_args.md  unified_checkpoint.md  wint8mix_lora.md
ernie/: configuration.py  configuration_paddleocr_vl.py  modeling.py  modeling_moe.py  modeling_moe_vl.py  modeling_moe_vl_pp.py  modeling_paddleocr_vl.py  modeling_paddleocr_vl_ernie.py  tokenizer.py  tokenizer_vl.py
erniekit/: cli.py  launcher.py
(+331 files in other folders)
