[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra "
pythonpath = ["."]
testpaths = [
    "tests/gpu",
    "tests/iluvatar_gpu",
    "tests/npu",
    "tests/xpu",
]
python_files = [
    "test.py",
    "test_*.py"
]
filterwarnings = [
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]
